[package]
name = "dazone"
version = "0.1.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
glob = "*"
simple_parallel = "0.2"
num_cpus = "0.2.6"
#flate2 = "0.2.7"
scan_fmt = "*"
pad = "*"
itertools = "*"
quick-error = "0.2.1"
rmp = "*"
csv = "*"
rustc-serialize = "*"
rmp-serialize = "*"
pbr = "*"
capnp = "*"
clap = "*"
rayon = "*"
time = "0.1"
radix_trie = "0.0.8"
libc = "*"
abomonation = "0.4.2"

[dependencies.capdata]
path = "capdata"

[dependencies.flate2]
git = "https://github.com/alexcrichton/flate2-rs"
#features = [ "zlib" ]
#default-features = false

[dependencies.timely]
git = "https://github.com/frankmcsherry/timely-dataflow.git"

