[package]
name = "dazone"
version = "0.1.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]

[dependencies]
glob = "*"
simple_parallel = "0.3"
num_cpus = "0.2.6"
chrono = "0.2.19"
#flate2 = "0.2.7"
scan_fmt = "*"
pad = "*"
itertools = "*"
quick-error = "0.2.1"
rmp = "*"
csv = "*"
rand = "*"
rustc-serialize = "*"
rmp-serialize = "*"
pbr = "*"
capnp = "*"
clap = { version = "2.0", features = ["unstable"] }
rayon = "*"
time = "0.1"
radix_trie = "0.0.8"
libc = "*"
abomonation = "0.4.2"
snappy_framed = "0.1.0"
fnv = "*"
cbor = "*"
bincode = "*"
protobuf = "*"
byteorder = "*"
memmap = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
lz4 = { git = "http://github.com/kali/lz4-rs" }
timely_communication = "0.1.3"

[dependencies.capdata]
path = "capdata"

[dependencies.flate2]
git = "https://github.com/alexcrichton/flate2-rs"
#features = [ "zlib" ]
#default-features = false

[dependencies.timely]
git = "https://github.com/frankmcsherry/timely-dataflow.git"

[dependencies.differential-dataflow]
git = "https://github.com/frankmcsherry/differential-dataflow.git"

#[profile.release]
#debug = true
